; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mmdrv/extr_common.c_ErrorToMmResult.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mmdrv/extr_common.c_ErrorToMmResult.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMSYSERR_NOERROR = common dso_local global i32 0, align 4
@MMSYSERR_ALLOCATED = common dso_local global i32 0, align 4
@MMSYSERR_NOTSUPPORTED = common dso_local global i32 0, align 4
@MMSYSERR_NOMEM = common dso_local global i32 0, align 4
@MMSYSERR_BADDEVICEID = common dso_local global i32 0, align 4
@MMSYSERR_INVALPARAM = common dso_local global i32 0, align 4
@MMSYSERR_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ErrorToMmResult(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %17 [
    i32 128, label %5
    i32 131, label %5
    i32 134, label %7
    i32 129, label %9
    i32 132, label %9
    i32 130, label %11
    i32 135, label %13
    i32 133, label %15
  ]

5:                                                ; preds = %1, %1
  %6 = load i32, i32* @MMSYSERR_NOERROR, align 4
  store i32 %6, i32* %2, align 4
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* @MMSYSERR_ALLOCATED, align 4
  store i32 %8, i32* %2, align 4
  br label %19

9:                                                ; preds = %1, %1
  %10 = load i32, i32* @MMSYSERR_NOTSUPPORTED, align 4
  store i32 %10, i32* %2, align 4
  br label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @MMSYSERR_NOMEM, align 4
  store i32 %12, i32* %2, align 4
  br label %19

13:                                               ; preds = %1
  %14 = load i32, i32* @MMSYSERR_BADDEVICEID, align 4
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @MMSYSERR_INVALPARAM, align 4
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @MMSYSERR_ERROR, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %15, %13, %11, %9, %7, %5
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
